# from_csv_to_db

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
db_migrations/: README  env.py
db_migrations/versions/: 27b726f1d992_4_add_columns_to_movies.py  6cdf57567691_2_create_table_actors.py  7c2c122104aa_1_create_table_movies.py  7c2c122104aa_create_table_movies.py  7f42ad7a8cea_5_rename_col_movie_actors.py  bbf621ccd2b9_3_create_table_movie_actors.py
src/: db_service.py  import_actors.py  import_movie_actors.py  import_movies.py  import_tools.py  model.py
